добавлен 3 экран с отдельной карточкой + гео + смена картинок

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
     <application
         android:allowBackup="true"
@@ -23,6 +25,10 @@
         </activity>
 
         <activity android:name=".PlacesActivity" />
+        <activity
+            android:name=".PlaceDetailActivity"
+            android:exported="true"
+            android:label="Place Detail" />
 
         <activity
             android:name=".MainActivity"
@@ -34,5 +40,11 @@
             android:name=".PlacesListActivity"
             android:exported="true"
             android:label="Places" />
+
+        <!-- Добавляем PlaceDetailActivity -->
+        <activity
+            android:name=".PlaceDetailActivity"
+            android:exported="true"
+            android:label="Place Detail" />
     </application>
 </manifest>
