--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,8 @@
         <activity android:name=".PlacesActivity" />
         <activity android:name=".ZemlyakiActivity" />
         <activity android:name=".PersonDetailActivity" /> <!-- Добавляем PersonDetailActivity -->
+        <activity android:name=".RegionDetailActivity" />
+
 
         <activity
             android:name=".MainActivity"
