--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,8 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
+    <uses-permission android:name="android.permission.INTERNET"/>
+
 
     <application
         android:allowBackup="true"
@@ -42,6 +44,7 @@
         <activity android:name=".afisha.AfishaActivity" />
 
         <activity android:name=".eat.PlacesToEatActivity"/>
+        <activity android:name=".eat.PlaceDetailActivity" />
 
         <activity
             android:name=".MainActivity"
