--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,7 +44,8 @@
         <activity android:name=".afisha.AfishaActivity" />
 
         <activity android:name=".eat.PlacesToEatActivity"/>
-        <activity android:name=".eat.PlaceDetailActivity" />
+        <activity android:name=".eat.PlaceEatDetailActivity" />
+        <activity android:name=".eat.FullScheduleActivity" />
 
         <activity
             android:name=".MainActivity"
