исправил отображение панели

--- a/gradle.properties
+++ b/gradle.properties
@@ -22,3 +22,11 @@ kotlin.code.style=official
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
 android.enableJetifier=true
+signingConfigs {
+release {
+storeFile file(/Users/chernyaev/Desktop/my-release-key.jks)
+storePassword Km36k1052$
+keyAlias Stavroteka
+keyPassword Km36k1052$
+}
+
