добавил пейджер фото

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,6 +45,8 @@
 
         <activity android:name=".eat.PlacesToEatActivity"/>
         <activity android:name=".eat.PlaceEatDetailActivity" />
+        <activity android:name=".eat.FullScreenImageActivity" />
+
 
 
         <activity
