--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,6 +42,7 @@
             /> <!-- Добавляем PersonDetailActivity -->
         <activity android:name=".region.RegionDetailActivity" />
         <activity android:name=".afisha.AfishaActivity" />
+        <activity android:name=".favorites.FavoritesActivity" />
 
         <activity android:name=".eat.PlacesToEatActivity"/>
         <activity android:name=".eat.PlaceEatDetailActivity" />
