🚀 Release v1.1.0: Jetpack Compose и MVVM архитектура
- Миграция на Jetpack Compose и Material3
- Реализация MVVM архитектуры
- Добавлены BaseViewModel, UiState, Repository
- Современные зависимости (Compose, Coroutines, StateFlow)
- Улучшенная производительность и UX
- Обновлена версия до 1.1.0

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
 
 
     <application
+        android:name=".StavropolApp"
         android:allowBackup="true"
         android:enableOnBackInvokedCallback="true"
         android:icon="@mipmap/logo_app"
@@ -41,6 +42,7 @@
             android:theme="@style/Theme.AppCompat.Light.NoActionBar"
             /> <!-- Добавляем PersonDetailActivity -->
         <activity android:name=".region.RegionDetailActivity" />
+        <activity android:name=".presentation.PlacesComposeActivity" />
         <activity android:name=".afisha.AfishaActivity" />
         <activity android:name=".favorites.FavoritesActivity" />
 
