--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -46,4 +46,5 @@ material = { group = "com.google.android.material", name = "material", version.r
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
 jetbrainsKotlinAndroid = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
+daggerHiltAndroid = { id = "dagger.hilt.android", version = "2.50" }
 
